--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.4.5",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18"
   },
