--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-auth": "^4.24.7",
     "razorpay": "^2.9.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
